--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=-38
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=316
-dock_hsplit_3=-272
+dock_hsplit_3=-348
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/player_animator/player_animator.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/textures/prototype/orange/", "res://assets/sounds/", "res://assets/sounds/sfx/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/weapons/projectile_rifle.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/weapons/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://assets/", "res://assets/textures/prototype/orange/", "res://assets/sounds/", "res://assets/sounds/sfx/", "res://assets/models/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,12 +32,12 @@ open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-232
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://classes/player_state_machine/base_state.gd", "res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_animator/player_animator.gd", "res://classes/player_audio/player_audio.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://classes/player_state_machine/rifle_aim_idle_state.gd", "res://classes/player_state_machine/rifle_down_idle_state.gd"]
-selected_script="res://classes/player_animator/player_animator.gd"
+selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
