--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/models/weapons/projectile_rifle_settings.txt")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/weapons/projectile_rifle.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/weapons/", "res://objects/characters/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://assets/", "res://assets/textures/prototype/orange/", "res://assets/sounds/", "res://assets/sounds/sfx/", "res://assets/models/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/characters/female_bot.tscn", "res://objects/weapons/projectile_rifle.tscn")
-current_scene="res://objects/weapons/projectile_rifle.tscn"
+current_scene="res://objects/characters/female_bot.tscn"
 center_split_offset=-232
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
@@ -37,7 +37,7 @@ selected_main_editor_idx=1
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://classes/player_state_machine/base_state.gd", "res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_animator/player_animator.gd", "res://classes/player_audio/player_audio.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://assets/models/weapons/projectile_rifle_settings.txt", "res://classes/player_state_machine/rifle_aim_idle_state.gd", "res://classes/player_state_machine/rifle_down_idle_state.gd"]
-selected_script="res://assets/models/weapons/projectile_rifle_settings.txt"
+selected_script="res://classes/player_animator/player_animator.gd"
 open_help=[]
 script_split_offset=142
 list_split_offset=75
@@ -57,7 +57,7 @@ log_filter_2=true
 log_filter_1=true
 log_filter_3=false
 log_filter_4=true
-collapse=false
+collapse=true
 show_search=true
 
 [EditorWindow]
