--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -199,11 +199,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 210,
-"scroll_position": 0.0,
+"row": 232,
+"scroll_position": 222.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -499,11 +499,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 84,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 88,
-"scroll_position": 78.0,
+"row": 113,
+"scroll_position": 106.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -541,11 +541,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 42.0,
+"row": 15,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -555,11 +555,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 13,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 13,
+"selection_to_column": 8,
+"selection_to_line": 13,
 "syntax_highlighter": "Plain Text"
 }
